# panorama-super-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  justfile  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
docs/: index.md
docs/contributing/: branching.md  development.md  release-process.md
docs/getting-started/: concepts.md  first-run.md  install.md
docs/guides/: comparing-and-porting.md  coverage-and-limitations.md  duplicates-and-merging.md  editing-objects.md  finding-objects.md  live-vs-offline.md  naming.md  output-formats.md  references-and-audit.md  safety.md  using-with-ai-agents.md  workbench.md
docs/reference/: cli.md  config.md  exit-codes.md
docs/stylesheets/: extra.css
psc/: __init__.py  __main__.py  _version.py
psc/cli/: __init__.py  _inspect_render.py  _options.py  _plan.py  app.py  audit_cmds.py  auth_cmds.py  decommission_cmds.py  dedup_cmds.py  diff_cmds.py  export_cmds.py  find_cmds.py  group_cmds.py  move_cmds.py  name_cmds.py  profile_cmds.py  refs_cmds.py  rule_cmds.py  runtime.py  set_cmds.py  show_cmds.py  skill_cmds.py  version_cmds.py  workbench_cmds.py
psc/config/: __init__.py  loader.py  models.py
psc/core/: __init__.py  apply_live.py  apply_xml.py  audit.py  changeset.py  crud.py  dagfilter.py  decommission.py  dedup.py  diff.py  group_edit.py  inspect.py  models.py  naming.py  normalize.py  parse.py  portability.py  promote.py  refs.py  relocate.py  resolve.py  resolver.py  rule_edit.py  rulebases.py  setcmd.py  source.py  version_check.py
psc/output/: __init__.py  errors.py  format.py
psc/skill/: __init__.py
psc/tui/: __init__.py  app.py  commands.py  palette.py  profiles.py  session.py  state.py  workbench.tcss
scripts/: sync_agents_md.py
skills/panorama-super-cli/: SKILL.md
tests/: conftest.py  test_apply_xml.py  test_audit.py  test_auth.py  test_changeset.py  test_cli.py  test_cli_audit.py  test_cli_auth.py  test_cli_decommission.py  test_cli_diff.py  test_cli_group.py  test_cli_inspect.py  test_cli_move.py  test_cli_name_apply.py  test_cli_portability.py  test_cli_profile.py  test_cli_promote.py  test_cli_rule.py  test_cli_set.py  test_cli_skill.py  test_config_loader.py  test_crud.py  test_dagfilter.py  test_decommission.py  test_dedup.py  test_dedup_shadow.py  test_diff.py  test_group_create.py  test_group_edit.py  test_hardening.py  test_inspect.py  test_live_apply.py  test_naming.py  test_nested_dg.py  test_normalize.py  test_output.py  test_parse.py  test_portability.py  test_profile_env_key.py  test_promote.py  (+9 more)
tests/fixtures/: all-rulebases.xml  cascade-device-groups.xml  decommission-config.xml  dedup-groups.xml  name-apply-all-collision.xml  name-apply-all.xml  nested-device-groups.xml  panorama-config.xml
tests/tui/: conftest.py  test_adversarial_fixes.py  test_app_pilot.py  test_apply_picker.py  test_audit.py  test_commands.py  test_create.py  test_decommission.py  test_dedup_plan.py  test_discovery_spokes.py  test_entry.py  test_group_new.py  test_group_screen.py  test_hub_layout.py  test_inspect_screen.py  test_keymap.py  test_markup_display.py  test_move.py  test_palette.py  test_parity_screens.py  test_profile_screen.py  test_profiles.py  test_rename.py  test_review.py  test_rule.py  test_session.py  test_source_switch.py  test_usage.py  (+1 more)
(+31 files in other folders)
