[project]
name = "panorama-super-cli"
version = "1.6.0"
description = "Agent-friendly CLI for Palo Alto Panorama object management: find, dedup/merge, rename, and audit address/service objects safely."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Thomas", email = "mick27@gmail.com" }]
keywords = ["paloalto", "panorama", "panos", "firewall", "cli", "automation", "netsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "structlog>=24.1",
    "platformdirs>=4.2",
    "pan-os-python>=1.12",
    "defusedxml>=0.7",
    "packaging>=23.0",
    "textual>=0.85",
]

[project.scripts]
panorama-super-cli = "psc.cli.app:main"
psc = "psc.cli.app:main"

[project.urls]
Homepage = "https://github.com/thomaschristory/panorama-super-cli"
Documentation = "https://thomaschristory.github.io/panorama-super-cli/"
Issues = "https://github.com/thomaschristory/panorama-super-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["psc"]

[tool.hatch.build.targets.wheel.force-include]
# `skills/panorama-super-cli/` lives outside the package tree but ships in the
# wheel so the bundled agent Skill travels with the install.
"skills/panorama-super-cli" = "skills/panorama-super-cli"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.20",
    "ruff>=0.15",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
docs = [
    "zensical>=0.0.38",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "RUF",               # ruff-specific
    "SIM",               # simplify
    "PL",                # pylint
    "TID",               # tidy imports
    "C4",                # comprehensions
]
ignore = [
    "PLR0913",           # too many arguments — Typer commands need them
    "UP042",             # str+Enum mix is intentional (typer/pydantic-friendly)
]

[tool.ruff.lint.per-file-ignores]
"psc/cli/**" = [
    "B008",              # typer.Option/Argument in defaults is the Typer idiom
]
"tests/**" = [
    "PLR2004",           # magic values in tests are fine
    "PLR0915",           # lifecycle tests legitimately need many statements
    "S101",              # asserts are how pytest works
    "B008",              # typer defaults in CLI-invoking tests
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# pan-os-python and defusedxml ship no type stubs.
module = ["panos.*", "defusedxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
